# 31kernel

./: Cargo.toml  LICENSE  Makefile  README.md
crypto/aes/: Cargo.toml
crypto/aes/src/: lib.rs
crypto/chacha20/: Cargo.toml
crypto/chacha20/src/: lib.rs
crypto/crypto_framework/: Cargo.toml
crypto/crypto_framework/src/: lib.rs
crypto/sha2/: Cargo.toml
crypto/sha2/src/: lib.rs
crypto_framework/: Cargo.toml
crypto_framework/src/: lib.rs
doc/: System call.md
lib/dtb/: Cargo.toml
lib/dtb/src/: lib.rs  utils.rs
lib/elf/src/: lib.rs  program.rs
src/: arch.rs  buddy_allocator.rs  devfs.rs  device.rs  global.rs  kmsg.rs  lang_items.rs  main.rs  malloc.rs  mcache.rs  mutex.rs  page.rs  path.rs  rand.rs  syscall.rs  task.rs  time.rs  trap.rs  vfs.rs
src/arch/: arm64.rs  riscv64.rs
src/arch/arm64/: cpu.rs  entry.S  gic.rs  page.rs  syscall.rs  trap.S  trap.rs
src/arch/riscv64/: cpu.rs  entry.S  page.rs  syscall.rs  trap.S  trap.rs
src/arch/x86_64/: cpu.rs
src/device/: uart.rs
src/lds/: virt.lds
