[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
authors = ["31core <31core@tutanota.com>"]
license-file = "LICENSE"

[features]
riscv_m_mode = []

[dependencies]
# cryptograthy libraries
aes = { path = "crypto/aes" }
chacha20 = { path = "crypto/chacha20" }
crypto_framework = { path = "crypto/crypto_framework" }
sha2 = { path = "crypto/sha2" }

dtb = { path = "lib/dtb" }
elf = { path = "lib/elf" }
